docs(auth): admin end points docs updated:
